@@ -1,3 +1,9 @@
+2013-05-28         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* main.c (main): Add minor hack to not run code if pretty printing
+	and undocumented env var GAWK_NO_PP_RUN exists.
+	* profile.c (pp_string): Explicitly print NUL chars as \000.
+
 2013-05-27         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Add dist-lzip to quiet
